--- a/template/template.html
+++ b/template/template.html
@@ -23,3 +23,10 @@
 		%%Nav%%
 	</container2>
   <hr>
+  %%Content%%
+  <hr>
+  <container4>
+    <p>The blog builder is still in development.</p>
+  </container4>
+</body>
+</html>
