tweak template style

--- a/template/post.html
+++ b/template/post.html
@@ -7,11 +7,10 @@
 			Created by
 			<span id = "author">
 				%%Author%%
-			</span> on
+			</span> | Date:
 			<time>
 				%%Date%%
-			</time>
-			in
+			</time> | Category:
 			<span id = "category">
 				%%Category%%
 				</span>
@@ -20,7 +19,7 @@
 		%%Body%%
 	</div>
 	</article>
-	<div>
+	<div> Tag: 
 		%%Tag%%
 	</div>
 	</container3>
