--- a/template/tag.html
+++ b/template/tag.html
@@ -1,6 +1,6 @@
 	<container3 class = "markdown-body">
 		<h1 class = "title">
-			%%Tag%%
+			All posts tagged with #%%Tag%%
 		</h1>
 			%%Post_list%%
 	</container3>
