--- a/template/category.html
+++ b/template/category.html
@@ -1,6 +1,6 @@
 	<container3 class = "markdown-body">
 		<h1 class = "title">
-			%%Category%%
+			All post under category: %%Category%%
 		</h1>
 			%%Post_list%%
 	</container3>
