--- a/template/page.html
+++ b/template/page.html
@@ -5,7 +5,7 @@
 		</h1>
 		<span class = "meta">
 			Created by
-			<span id = "author">%%Author%%</span>
+			<span id = "author">%%Author%%</span> | Date: 
 			<time>
 				%%Date%%
 			</time>
