--- a/template/page.html
+++ b/template/page.html
@@ -1,17 +1,15 @@
-	<container3 class = "markdown-body">
-		<article>
+	<div class = "markdown-body">
 		<h1 class = "title">
 			%%Title%%
 		</h1>
 		<span class = "meta">
 			Created by
-			<span id = "author">%%Author%%</span> | Date: 
+			<span id = "author">%%Author%%</span> | Date:
 			<time>
 				%%Date%%
 			</time>
 		</span>
-		<div class = "content">
+		<article>
 		%%Body%%
-	</div>
 	</article>
-	</container3>
+	</div>
