--- a/template/archive.html
+++ b/template/archive.html
@@ -1,6 +1,6 @@
-	<container3 class = "markdown-body">
+	<div class = "markdown-body">
 		<h1 class = "title">
 			Archive
 		</h1>
 			%%Post_list%%
-	</container3>
+	</div>
