--- a/template/post.html
+++ b/template/post.html
@@ -1,5 +1,4 @@
-	<container3 class = "markdown-body">
-		<article>
+	<div class = "markdown-body">
 		<h1 class = "title">
 			%%Title%%
 		</h1>
@@ -15,11 +14,10 @@
 				%%Category%%
 				</span>
 		</span>
-		<div class = "content">
+		<article>
 		%%Body%%
-	</div>
-	</article>
-	<div> Tag: 
+		</article>
+	<div> Tag:
 		%%Tag%%
 	</div>
-	</container3>
+	</div>
