adjust placeholder style

--- a/template/category.html
+++ b/template/category.html
@@ -1,6 +1,6 @@
 	<div class = "markdown-body">
 		<h1 class = "title">
-			All post under category: %%Category%%
+			All post under category: {$Category$}
 		</h1>
-			%%Post_list%%
+			{&Post_list&}
 	</div>
