--- a/template/template.html
+++ b/template/template.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	%%Page_Title%%
-	%%Base%%
+	{&Page_Title&}
+	{&Base&}
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../asset/style.css">
 	<!-- highlight.js-->
@@ -23,9 +23,9 @@
 		<a id = "logo" href = '../index.html'>Blog Builder</a>
 		<p id = "description">build with 54wedge's blog builder</p>
 	</div>
-		%%Nav%%
+		{&Nav&}
   <hr>
-  %%Content%%
+  {&Content&}
   <hr>
   <div id="footer">
     <p>The blog builder is still in development.</p>
