--- a/template/page.html
+++ b/template/page.html
@@ -1,15 +1,15 @@
 	<div class = "markdown-body">
 		<h1 class = "title">
-			%%Title%%
+			{$Title$}
 		</h1>
 		<span class = "meta">
 			Created by
-			<span id = "author">%%Author%%</span> | Date:
+			<span id = "author">{$Author$}</span> | Date:
 			<time>
-				%%Date%%
+				{$Date$}
 			</time>
 		</span>
 		<article>
-		%%Body%%
+		{&Body&}
 	</article>
 	</div>
