--- a/template/post.html
+++ b/template/post.html
@@ -1,23 +1,23 @@
 	<div class = "markdown-body">
 		<h1 class = "title">
-			%%Title%%
+			{$Title$}
 		</h1>
 		<span class = "meta">
 			Created by
 			<span id = "author">
-				%%Author%%
+				{$Author$}
 			</span> | Date:
 			<time>
-				%%Date%%
+				{$Date$}
 			</time> | Category:
 			<span id = "category">
-				%%Category%%
+				{&Category&}
 				</span>
 		</span>
 		<article>
-		%%Body%%
+		{&Body&}
 		</article>
 	<div> Tag:
-		%%Tag%%
+		{&Tag&}
 	</div>
 	</div>
