--- a/template/post.html
+++ b/template/post.html
@@ -1,14 +1,14 @@
 	<div class = "markdown-body">
 		<h1 class = "title">
-			{$Title$}
+			{@Title@}
 		</h1>
 		<span class = "meta">
 			Created by
 			<span id = "author">
-				{$Author$}
+				{@Author@}
 			</span> | Date:
 			<time>
-				{$Date$}
+				{@Date@}
 			</time> | Category:
 			<span id = "category">
 				{&Category&}
