--- a/template/tag.html
+++ b/template/tag.html
@@ -1,6 +1,6 @@
 	<div class = "markdown-body">
 		<h1 class = "title">
-			All posts tagged with #{$Tag$}
+			All posts tagged with #{@Tag@}
 		</h1>
 			{&Post_module&}
 	</div>
