--- a/template/template.html
+++ b/template/template.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>{$Page_Title$}</title>
-	<base href="{$Base$}"/>
+	<title>{@Page_Title@}</title>
+	<base href="{@Base@}"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../asset/style.css">
 </head>
