Update github markdown css style

--- a/template/asset/style.css
+++ b/template/asset/style.css
@@ -74,7 +74,7 @@ body{
     background:#7d7d7d
   }
   body {
-    background-color: #1a1c1f;
+    background-color: #0d1117;
     color: #b3b3b3;
   }
   .markdown-body {
